# whitman

./: .mise.toml  AGENTS.md  Cargo.toml  README.md  plan.md  spec.md
.github/workflows/: release.yml  whitman-pr-checks.yml
.whitman/agents/: AGENTS.caveman.md  AGENTS.pirate.md  descriptions.toml
_cli-tools/whitman/: Cargo.toml  README.md
_cli-tools/whitman/src/: agents_file.rs  main.rs  profile.rs
_cli-tools/whitman/tests/: agents_file_tests.rs  cli_tests.rs  profile_tests.rs
_scripts/: cargo_version.sh  upsert_mise_registry_entry.sh  write_homebrew_formula.sh
src/: agents_file.rs  lib.rs  main.rs  platform.rs  profile.rs  tui.rs
tests/: agents_file_tests.rs  cli_tests.rs  profile_tests.rs
